Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17373

Windows : application verifier stop "Attempt to use an unknown SOCKET" in debug build.

    XMLWordPrintable

Details

    Description

      In debug code (DBUG_EXECUTE_IF), and hopefully only there, sometimes the socket is being closed from inside the server and set to INVALID_SOCKET

      Verified does not like it, and stops with

      =======================================
      VERIFIER STOP 0000E102: pid 0x1080: Attempt to use an unknown SOCKET

      FFFFFFFF : SOCKET being accessed

      at this place e.g in connect_debug test

      mysqld!inline_mysql_socket_send
      mysqld!vio_write
      mysqld!net_real_write
      mysqld!net_flush
      mysqld!net_write_command
      mysqld!net_send_error_packet
      mysqld!Protocol::send_error
      mysqld!Protocol::end_statement
      mysqld!login_connection
      mysqld!thd_prepare_connection

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.