MDEV-17373 Windows: application verifier stop "Attempt to use an unknown SOCKET"